--- a/5_Integration/javascript/frontend/index.html
+++ b/5_Integration/javascript/frontend/index.html
@@ -31,9 +31,8 @@
                     output(req.status + '\n\n' + req.responseText);
                 }
             }
-            req.open('GET', 'SERVICE_URL', true);
             // Ajouter le jeton dans la requête
-            req.open('GET', 'SERVICE_URL', true);
+            req.open('GET', "http://localhost:9000/protected", true);
             req.setRequestHeader('Authorization', 'Bearer ' + keycloak.token);
             req.send();
         }
